--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017/sistema_educativo
 JWT_SECRET=un_secreto_largo_y_seguro
 PORT=3100
+PYTHON_SERVICE_URL=http://localhost:5000
